--- a/src/components/core-ui/landing/landing.css
+++ b/src/components/core-ui/landing/landing.css
@@ -14,12 +14,12 @@
 }
 
 .landing--img {
-  --img-size: 350px;
+  --img-size: 400px;
   position: absolute;
   left: 35%;
   transform: translateX(-50%);
   width: var(--img-size);
-  height: var(--img-size);
+  height: var(--img-size + 10px);
   object-fit: cover;
   border-radius: 10%;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
